--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,5 @@
 = mill-publishM2 - Publish artifacts to local Maven Repositories
-:mill-publishM2-version: 0.1.1
+:mill-publishM2-version: 0.1.3
 :toc:
 :toc-placement: preamble
 
@@ -48,8 +48,9 @@ The following table shows a matrix of compatible mill and mill-publishM2 version
 .Version Compatibility Matrix
 [options="header"]
 |===
-| mill-osgi | mill
-| 0.1.1 | 0.5.7 - 0.6.0
+| mill-publishM2 | mill
+| 0.1.3 | 0.6.0 - 0.6.1
+| 0.1.2 | 0.5.7
 | 0.1.0 | 0.3.6 - 0.5.3
 | 0.0.2 | 0.3.2
 | 0.0.1 | 0.2.8
@@ -62,7 +63,11 @@ Apache License, version 2.0
 
 == Changelog
 
-=== mill-publishM2 0.1.1 - 2020-01-22
+=== mill-publishM2 0.1.3 - 2020-03-11
+
+* Version bump Mill API to 0.6.0
+
+=== mill-publishM2 0.1.2 - 2020-01-22
 
 * Version bump to mill 0.5.7
 
