--- a/README.adoc
+++ b/README.adoc
@@ -6,6 +6,9 @@
 
 Mill plugin to publish artifacts into a local Maven repository.
 
+NOTE: *This mill plugin is now obsolete since Mill 0.6.2.
+I migrated all of it's functionality into mill core.*
+
 == Quickstart
 
 Just mix-in the `PublishM2Module` into your project. `PublishM2Module` already extends mill's built-in `PublishModule`.
@@ -49,7 +52,7 @@ The following table shows a matrix of compatible mill and mill-publishM2 version
 [options="header"]
 |===
 | mill-publishM2 | mill
-| 0.1.3 | 0.6.0 - 0.6.1
+| 0.1.3 | 0.6.0 - 0.6.2
 | 0.1.2 | 0.5.7
 | 0.1.0 | 0.3.6 - 0.5.3
 | 0.0.2 | 0.3.2
